app/scss/components/_nav.scss
@use "../base/breakpoints" as *;

.navbar {
  position: sticky;
  top: 0;
  z-index: 99999;
  background: hsl(0deg 0% 100% / 85%);
  box-shadow: inset 0 -1px 0 0 hsla(0, 0%, 0%, 0.05);
  backdrop-filter: saturate(180%) blur(5px);
  backface-visibility: hidden;

  &__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1080px;
    margin: 0 auto;
    padding: 1rem 2rem;
    transition: padding 150ms ease-in;

    @include breakpoint(sm-tablet) {
      padding: 1rem 2rem;
    }

    @include breakpoint(sm-mobile) {
      padding: 1rem;
    }
  }

  &__overlay {
    position: absolute;
    z-index: -1;
    top: 0;
    left: -100vw;
    width: 100vw;
    height: 100vh;
    content: "";
    transition: opacity 300ms ease-in;
    pointer-events: none;
    opacity: 0;
    background-color: hsla(213, 78%, 8%, 0.9);

    @media (min-width: 992px) {
      background-color: transparent;
    }
  }

  &__logo {
    width: 120px;
    min-width: 120px;
    height: 40px;

    @include breakpoint(lg-tablet) {
      display: flex;
    }

    svg {
      width: 120px;
      height: 40px;
    }
  }

  &__links {
    font-weight: 600;
    display: flex;
    align-items: center;
    gap: 1rem;

    @include breakpoint(lg-tablet) {
      position: absolute;
      z-index: 1000;
      top: 0;
      right: 0;
      flex-direction: column;
      gap: 3rem;
      width: 50vw;
      height: 100vh;
      padding: min(30vh, 5rem) 2rem;
      transition: opacity 300ms ease-in;
      pointer-events: none;
      opacity: 0;
      background-color: hsla(0, 0%, 100%, 0.98);
      backdrop-filter: blur(5px);
    }

    @include breakpoint(sm-tablet) {
      width: 100vw;
    }

    &[data-visible="true"] {
      .navbar__overlay {
        opacity: 1;
      }
    }
  }

  &__link {
    padding: 0.5rem 1rem;
    cursor: pointer;
    color: var(--blue-900);

    &:hover {
      color: var(--blue-500);
    }
  }

  &__hamburger {
    z-index: 9999;
    display: none;
    width: 22px;
    height: 22px;
    padding: 0;
    cursor: pointer;
    border: none;
    background: none;
    aspect-ratio: 1;

    @include breakpoint(lg-tablet) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      gap: 0.3rem;
    }

    .line {
      width: 100%;
      height: 2px;
      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
      transform-origin: left;
      background-color: var(--blue-gray-400);
    }

    &[aria-expanded="true"] {
      .line-1 {
        transform: rotate(45deg) translate(0px, -4px);
      }

      .line-2 {
        transform: rotate(-45deg) translate(-3px, 6px);
      }
    }
  }

  .dropdown {
    position: relative;
    cursor: pointer;

    &[data-open="true"] {
      .dropdown__title {
        color: var(--blue-500);
      }

      .dropdown__chevron {
        transform: rotate(-90deg);
        stroke: var(--blue-500);
      }
    }

    &:hover .dropdown__menu {
      display: flex;
      flex-direction: column;
      gap: 0.5rem;
      width: max-content;
    }

    &:hover .dropdown__title {
      color: var(--blue-500);
    }

    &__button {
      background: none;
      border: none;
      padding: .5rem 1rem;
      font-size: 1rem;
      font-weight: 600;
      color: var(--blue-900);
    }

    &__title {
      cursor: pointer;
    }

    &__chevron {
      margin-left: 0.3rem;
      transform: translateY(-1px) rotate(90deg);
      transition: transform 200ms ease-out;
      transform-origin: 25% 50%;
      stroke: var(--blue-900);
      stroke-width: 2;
      stroke-linecap: round;
      stroke-linejoin: round;
    }

    &:hover .dropdown__chevron {
      transform: translateY(2px) rotate(-90deg);
      stroke: var(--blue-500);
    }

    &__menu {
      position: absolute;
      z-index: 999;
      top: 45px;
      left: 50%;
      display: none;
      padding: 1rem;
      transform: translateX(-50%);
      border-radius: 10px;
      background-color: white;
      box-shadow: 0 0 24px 0 hsla(213, 78%, 16%, 0.15);

      &[aria-hidden="false"] {
        display: flex;
        flex-direction: column;
        gap: 0.5rem;
        width: max-content;
      }

      &::before {
        position: absolute;
        top: -28px;
        left: 50%;
        width: 0;
        height: 0;
        content: "";
        transform: rotate(-90deg) translateY(-50%);
        border: 15px solid transparent;
        border-left: 12px solid white;
        filter: drop-shadow(0, 2px, 8px, #000);
      }
    }

    &__menu-item {
      display: flex;
      align-items: center;
      gap: 1rem;
      padding: 0.5rem 1rem;
      cursor: pointer;
      border-radius: 8px;

      &:hover {
        background-color: var(--blue-gray-50);
      }

      .btn__chevron {
        opacity: 0;
      }

      &:hover .btn__chevron {
        opacity: 1;

        path {
          transition: all 150ms ease-out;
        }

        path:nth-child(1) {
          d: path("M1.5 6L10.5 6");
        }

        path:nth-child(2) {
          transform: translateX(4px);
        }
      }
    }

    &__text {
      display: flex;
      flex-direction: column;
    }

    &__text h5 {
      color: var(--blue-900);
    }

    &__text small {
      color: var(--blue-gray-600);
    }
  }
}

.subnav {
  position: sticky;
  z-index: 9999;
  top: 72px;
  max-width: 100%;
  padding: 0.75rem 2rem;
  background: var(--blue-gray-50);
  backdrop-filter: blur(5px);

  &__container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    max-width: 1080px;
    margin: 0 auto;
    transition: padding 150ms ease-in;

    @include breakpoint(lg-tablet) {
      justify-content: center;
    }
  }

  &__links {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 0.75rem;
    padding: 0.25rem 0.5rem;

    @include breakpoint(sm-tablet) {
      gap: 0.25rem;
    }
  }

  &__link {
    font-size: 0.8rem;
    padding: 0.25rem 0.5rem;
    vertical-align: middle;
    color: var(--blue-900);

    @include breakpoint(sm-tablet) {
      font-size: 0.7rem;
    }

    &--active {
      color: white;
      border-radius: 5px;
      background-color: var(--blue-500);
    }
  }

  &__divider {
    color: var(--blue-gray-300);
  }
}

.no-padding {
  padding: 1rem 2rem;
}

